Fix newsletter padding on tablet screens

--- a/app/assets/stylus/widgets/newsletter.styl
+++ b/app/assets/stylus/widgets/newsletter.styl
@@ -6,7 +6,7 @@
     padding 40px 0
 
     @media screen and ( min-width $screen-md )
-        padding 50px 0
+        padding 50px
 
     @media screen and ( min-width $screen-lg )
         padding 55px 0
@@ -20,9 +20,6 @@
 
         @media screen and ( min-width $screen-md )
             margin-bottom 50px
-
-    &--subtitle
-        //
 
     &--inputs
         @media screen and ( min-width $screen-md )
